feat(new-flags) added flag

--- a/JS/Cursos/useacabeca-js/donuts.html
+++ b/JS/Cursos/useacabeca-js/donuts.html
@@ -51,21 +51,21 @@
           <label for="lastname" class="col-sm-6 col-form-label">Subtotal:</label>
           <div class="col-sm-6">
             <input type="text" class="form-control" name="subtotal"  id="subtotal"
-              minlength="6" maxlength="9" size="9" placeholder="Confirm your password ">
+              minlength="6" maxlength="9" size="9" disabled placeholder="Confirm your password ">
           </div>
         </div>
         <div class="row mb-3">
           <label for="lastname" class="col-sm-6 col-form-label">Tax:</label>
           <div class="col-sm-6">
             <input type="text" class="form-control" name="tax"  id="tax"
-              minlength="6" maxlength="9" size="9" placeholder="Confirm your password ">
+              minlength="6" maxlength="9" size="9" disabled placeholder="Confirm your password ">
           </div>
         </div>
         <div class="row mb-3">
-          <label for="lastname" class="col-sm-6 col-form-label">Total:</label>
+          <label for="lastname" class="col-sm-6 col-form-label" >Total:</label>
           <div class="col-sm-6">
             <input type="text" class="form-control" name="total"  id="total"
-              minlength="6" maxlength="9" size="9" placeholder="Confirm your password ">
+              minlength="6" maxlength="9" size="9" disabled placeholder="Confirm your password ">
           </div>
         </div>
 
