--- a/JS/Cursos/useacabeca-js/irock.html
+++ b/JS/Cursos/useacabeca-js/irock.html
@@ -17,6 +17,13 @@
         </div>
         <img src="./image/irock.png" id="" onclick="alert('MExe mexe')" name="" class="rounded mx-auto d-block" alt="Responsive image">
         <div class="rock "></div>
+        
+        <div class="container visually-hidden" id="test">
+            <h2 id="timer"></h2>
+            <div class="alert alert-danger" id="myAlert" role="alert">
+              <p>Seu tempo acabou !</p>
+            </div>
+        </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
