feat(open-table-pdv) added button

--- a/JS/Cursos/useacabeca-js/irock.html
+++ b/JS/Cursos/useacabeca-js/irock.html
@@ -15,7 +15,7 @@
         <div class="d-flex justify-content-center">
             <h1>IRock</h1>
         </div>
-        <img src="./image/irock.png" id="" onclick="alert('MExe mexe')" name="" class="rounded mx-auto d-block" alt="Responsive image">
+        <img src="./image/irock.png" id="" onclick="touchRock()" name="" class="rounded mx-auto d-block" alt="Responsive image">
         <div class="rock "></div>
         
         <div class="container visually-hidden" id="test">
