feat(open-table-pdv) added actionOpenOrder

--- a/JS/Cursos/useacabeca-js/irock.html
+++ b/JS/Cursos/useacabeca-js/irock.html
@@ -10,7 +10,7 @@
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
 
-<body class="bg-dark text-light" onload="aresizeRock()" onresize="resizeRock()">
+<body class="bg-dark text-light" onload="resizeRock()" onresize="resizeRock()">
     <div class="container">
         <div class="d-flex justify-content-center">
             <h1>IRock</h1>
